--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "d3-radar-spider",
   "version": "0.0.1",
   "description": "D3.js v4 plugin to draw reusable radar charts",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "compress": "gulp compress"
   },
   "repository": {
     "type": "git",
@@ -16,17 +17,22 @@
     "url": "https://github.com/mthh/d3-radar-spider/issues"
   },
   "homepage": "https://github.com/mthh/d3-radar-spider#readme",
+  "dependencies": {
+    "d3": "^4.10.0"
+  },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "gulp": "^3.9.1",
+    "gulp-file": "^0.3.0",
+    "rollup": "^0.48.2",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-babel-minify": "^3.1.2"
   }
 }
